--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=EANPrueba
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/mercadona
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.connection.autocommit=true
+logging.level.org.hibernate.orm.query.hql=debug
