--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,15 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.connection.autocommit=true
 logging.level.org.hibernate.orm.query.hql=debug
+
+spring.cache.type=caffeine
+
+#Habilitar/deshabilitar api-docs - swagger-ui:
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+#Definimos la ruta del swagger
+springdoc.swagger-ui.path=/swagger-ui/
+
+#Seleccionar paquetes o clases a escanear
+springdoc.packages-to-scan=com.mercadona.eanprueba
